added cartopy basemap after too many plt basemap errors

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 # List of dependencies
 ipython
 ipykernel
-numpy
+numpy<2.0
 pandas
 matplotlib
 seaborn
 scipy
 statsmodels
 geopandas
+contextily
+shapely
+folium
+basemap
+cartopy
